{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 246,
  "lineage": "8fbd2f65-5cf4-78dc-2c39-06774f924664",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/networkInterfaces/app-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/virtualNetworks/secure-vnet/subnets/private-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "mac_address": "60-45-BD-2C-F3-90",
            "name": "app-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "secure-server-rg",
            "virtual_machine_id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Compute/virtualMachines/app-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_subnet.private",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "bastion_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/networkInterfaces/bastion-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/publicIPAddresses/bastion-public-ip",
                "subnet_id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/virtualNetworks/secure-vnet/subnets/public-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralus",
            "mac_address": "60-45-BD-31-3D-DF",
            "name": "bastion-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "secure-server-rg",
            "virtual_machine_id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Compute/virtualMachines/bastion-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.bastion",
            "azurerm_resource_group.main",
            "azurerm_subnet.public",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "centralus",
            "name": "app-nsg",
            "resource_group_name": "secure-server-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22"
                ],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.1.0/24"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "bastion_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/networkSecurityGroups/bastion-nsg",
            "location": "centralus",
            "name": "bastion-nsg",
            "resource_group_name": "secure-server-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "22"
                ],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "128.250.0.221/32"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/publicIPAddresses/bastion-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.29.122.252",
            "ip_version": "IPv4",
            "location": "centralus",
            "name": "bastion-public-ip",
            "resource_group_name": "secure-server-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/virtualNetworks/secure-vnet/subnets/private-subnet",
            "name": "private-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "secure-server-rg",
            "virtual_network_name": "secure-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/virtualNetworks/secure-vnet/subnets/public-subnet",
            "name": "public-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "secure-server-rg",
            "virtual_network_name": "secure-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/virtualNetworks/secure-vnet/subnets/private-subnet",
            "network_security_group_id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/virtualNetworks/secure-vnet/subnets/private-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.app_nsg",
            "azurerm_resource_group.main",
            "azurerm_subnet.private",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/virtualNetworks/secure-vnet/subnets/public-subnet",
            "network_security_group_id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/networkSecurityGroups/bastion-nsg",
            "subnet_id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/virtualNetworks/secure-vnet/subnets/public-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.bastion_nsg",
            "azurerm_resource_group.main",
            "azurerm_subnet.public",
            "azurerm_virtual_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cfa13bea-9965-42a5-91ce-aaf47fcc2c76",
            "id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/virtualNetworks/secure-vnet",
            "location": "centralus",
            "name": "secure-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "secure-server-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/virtualNetworks/secure-vnet/subnets/public-subnet",
                "name": "public-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/networkSecurityGroups/bastion-nsg"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/virtualNetworks/secure-vnet/subnets/private-subnet",
                "name": "private-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/dde349b6-e516-4976-bc8d-4e4036bd454d/resourceGroups/secure-server-rg/providers/Microsoft.Network/networkSecurityGroups/app-nsg"
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.main"
          ]
        }
      ]
    }
  ]
}